--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import "src/assets/main.scss";
+
 .app {
   display: flex;
   gap: 10px;
@@ -5,9 +7,34 @@
   ul {
     margin: 0;
     padding: 0;
+
+    & > li {
+      list-style-type: none;
+    }
+  }
+}
+
+.lifts {
+  position: absolute;
+  display: flex;
+  border: 2px solid #00457e;
+  height: 400px;
+
+  & > li {
+    border-left: 2px solid #00457e;
+    border-bottom: none;
   }
 
-  li {
-    list-style-type: none;
+  & > li:first-child {
+    border-left: none;
+  }
+}
+
+.buttons {
+  & > li:last-child {
+    border: none;
+  }
+  & > li {
+    border-bottom: 1px solid $darkBlue;
   }
 }
