--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,10 +1,10 @@
-@import "src/assets/main.scss";
+@import "src/assets/colors.scss";
 
 .button {
-  height: 80px;
+  height: 81px;
   display: flex;
   align-items: center;
-  padding: 0 14px 0 250px;
+  padding: 0 15px;
 
   button {
     cursor: pointer;
