--- a/src/components/Lift/lift.scss
+++ b/src/components/Lift/lift.scss
@@ -1,4 +1,4 @@
-@import "src/assets/main.scss";
+@import "src/assets/colors.scss";
 
 .blink {
   animation-name: blinker;
@@ -16,7 +16,7 @@
     opacity: 1;
   }
   to {
-    opacity: 0;
+    opacity: 0.6;
   }
 }
 
@@ -25,6 +25,6 @@
     opacity: 1;
   }
   to {
-    opacity: 0;
+    opacity: 0.6;
   }
 }
